--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+/build
+/.firebase
 /.pnp
 .pnp.js
 
@@ -21,3 +23,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.firebaserc
+.gitignore
+firebase.json
+.env
